2003-10-03  Steven G. Johnson  <stevenj@alum.mit.edu>

	* lib/autoconf/fortran.m4 (AC_PROG_FC): Reverse the order of the
	arguments so that it can be used with syntax identical to
	AC_PROG_F77, and so that we can more easily decide to
	remove/deprecate the DIALECT optional argument in the future if it
	proves troublesome.
	(AC_FC_FREEFORM): Exit 77 upon failure to fix test suite for
	non-freeform-supporting compilers.  Document freeform flags.

2003-10-03  Akim Demaille  <akim@epita.fr>

	* configure.ac: Look for emacs, not macs.
	Reported by Eric Sunshine.

2003-10-03  Akim Demaille  <akim@epita.fr>

	* lib/autom4te.in (Autoreconf-preselections): Trace AC_CONFIG_AUX_DIR.
	* bin/autoreconf.in (autoreconf_current_directory): Create the
	AUX_DIR if needed, for sake of automake --add-missing etc.
	Suggested by Alexandre Duret-Lutz.

2003-10-03  Akim Demaille  <akim@epita.fr>

	* configure.ac: Quotation and formatting changes.
	(EMACS): Don't set it if it is not recent enough to support
	autoconf-mode.el.
	From Eric Sunshine.

2003-10-02  Akim Demaille  <akim@epita.fr>

	* bin/ifnames.in (&scan_file): Skip C++ comments.
        From Jeremy Yallop.

2003-10-01  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi (Particular Structure Checks):
	Fix misspelling of HAVE_STRUCT_STAT_ST_BLOCKS.

2003-10-01  Akim Demaille  <akim@epita.fr>

	Version 2.57f.

2003-09-30  Paul Eggert  <eggert@twinsun.com>

	* lib/Autom4te/XFile.pm: Use Errno.
	(lock): Ignore ENOLCK errors.  Problem reported Andreas Schwab in
	<http://mail.gnu.org/archive/html/bug-autoconf/2003-09/msg00141.html>.

2003-09-30  Akim Demaille  <akim@epita.fr>

	* config/announce-gen (&print_news_deltas): Extracted from...
	(&print_changelog_deltas): here.
	(&news_file): Rename as...
	(@news_file): this.

2003-09-30  Nicolas Joly  <njoly@pasteur.fr>

	* lib/autoconf/fortran.m4 (_AC_PROG_FC): Remove files which might
	have been created when invoking the compiler.
	* tests/fortran.at (GNU Fortran 77): Quote $G77.
